Gate independent empty-input pairs and record genuine Sequence evidence